# shntool

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in
debian/: .gitlab-ci.yml  changelog  clean  control  copyright  docs  links  rules  watch
debian/patches/: series
doc/: CREDITS  TODO  TUTORIAL  modules.howto
include/: binary.h  config.h  config.h.in  convert.h  core.h  fileio.h  format-types.h  format.h  md5.h  misc.h  mode-types.h  mode.h  module-types.h  module.h  output.h  shntool.h  wave.h
man/: Makefile.in  shntool.1
src/: Makefile.am  Makefile.in  core_convert.c  core_fileio.c  core_format.c  core_misc.c  core_mode.c  core_module.c  core_output.c  core_shntool.c  core_wave.c  format_aiff.c  format_alac.c  format_als.c  format_ape.c  format_bonk.c  format_cust.c  format_flac.c  format_kxs.c  format_la.c  format_lpac.c  format_mkw.c  format_null.c  format_ofr.c  format_rka.c  format_shn.c  format_tak.c  format_term.c  format_tta.c  format_wav.c  format_wma.c  format_wv.c  mode_cat.c  mode_cmp.c  mode_conv.c  mode_cue.c  mode_fix.c  mode_gen.c  mode_hash.c  mode_info.c  (+7 more)
utils/: glue.sh
